# tinypy

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  lint.yml  spelleheck.yml  test.yml
tests/: test_eval.py  test_lexer_basic.py  test_lexer_extended.py  test_parser.py  test_parser_ext.py
tinypy/: __init__.py  ast_nodes.py  errors.py  interpreter.py  lexer.py  parser.out  parser.py  parsetab.py  repl.py
tinypy/dev/: ast_repr.py
