[project]
name = "tinypy"
version = "0.1.0"
description = ""
authors = [
    {name = "leterDieu",email = "leterdieu@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ply (>=3.11,<4.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "codespell (>=2.4.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
